[project]
name = "python"
version = "0.1.0"
description = ""

authors = [{ name = "gh110919", email = "e0e6labw63za@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["aiohttp (>=3.11.11,<4.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python"
version = "0.1.0"
packages = [{ include = "src" }]
